[gd_scene load_steps=8 format=3 uid="uid://bw67wbi2y10qu"]

[ext_resource type="Texture2D" uid="uid://ctuki01j7jnqa" path="res://assets/png/action_icons/sprint_icon.png" id="1_ojunn"]
[ext_resource type="Texture2D" uid="uid://dar53oo5nlmlm" path="res://assets/png/action_icons/sprint_hl_icon.png" id="2_qqx8f"]
[ext_resource type="FontFile" uid="uid://dearxsr0o01k5" path="res://assets/fonts/MYRIADPRO-SEMIBOLD.OTF" id="3_eo8x5"]
[ext_resource type="Script" path="res://scenes/ui/action_button.gd" id="3_v5yub"]
[ext_resource type="FontFile" uid="uid://dflgosesmjvf" path="res://assets/fonts/MYRIADPRO-BOLD.OTF" id="4_4hoio"]

[sub_resource type="LabelSettings" id="LabelSettings_w2ujh"]
font = ExtResource("3_eo8x5")
font_size = 12
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_58cpc"]
font = ExtResource("4_4hoio")
font_size = 12
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="ActionButton" type="TextureButton"]
custom_minimum_size = Vector2(40, 40)
focus_mode = 0
texture_normal = ExtResource("1_ojunn")
texture_hover = ExtResource("2_qqx8f")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_v5yub")

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CooldownSweep" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0.172549, 0.172549, 0.172549, 0.776471)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 5
nine_patch_stretch = true

[node name="CooldownMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = -10

[node name="CooldownLabel" type="Label" parent="CooldownMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "12"
label_settings = SubResource("LabelSettings_w2ujh")
clip_text = true

[node name="KeybindMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 12.0
grow_horizontal = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5

[node name="KeybindLabel" type="Label" parent="KeybindMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_58cpc")
clip_text = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
